fix: Atoms/Button align center text.

--- a/src/components/atoms/Button/style.module.scss
+++ b/src/components/atoms/Button/style.module.scss
@@ -19,7 +19,9 @@ $arrow-init: translate(-100%, -50%);
   @apply w-full h-spUI p-8 text-24;
 
   border-radius: 50px;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
